--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "aphrodite": "^2.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.4.2",
     "react-router-dom": "^5.3.0",
     "react-router-transition": "^2.1.0",
     "react-scripts": "4.0.3",
