--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
-    "@ant-design/charts": "^1.3.5",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -22,6 +21,7 @@
     "react-router-transition": "^2.1.0",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
+    "react-vis": "^1.11.7",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
@@ -54,6 +54,7 @@
     "@types/react-router-dom": "^5.3.1",
     "@types/react-router-transition": "^2.1.1",
     "@types/react-transition-group": "^4.4.3",
-    "@types/uuid": "^8.3.1"
+    "@types/uuid": "^8.3.1",
+    "@types/react-vis": "^1.11.10"
   }
 }
