--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
     "react-vis": "^1.11.7",
+    "serve": "^13.0.2",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "env-cmd -e development react-scripts start --host 0.0.0.0",
+    "start": "env-cmd -e development serve -s build",
     "build": "env-cmd -e production react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -54,7 +55,7 @@
     "@types/react-router-dom": "^5.3.1",
     "@types/react-router-transition": "^2.1.1",
     "@types/react-transition-group": "^4.4.3",
-    "@types/uuid": "^8.3.1",
-    "@types/react-vis": "^1.11.10"
+    "@types/react-vis": "^1.11.10",
+    "@types/uuid": "^8.3.1"
   }
 }
